Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12383

Aggregation with num_nodes=1 and limit returns too many rows

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.1.0
    • Impala 4.3.0
    • Backend, Frontend
    • None

    Description

      With set num_nodes=1 to select SingleNodePlanner, aggregations return too many rows:

      > select distinct l_orderkey from tpch.lineitem limit 10;
      ...
      Fetched 16 row(s) in 0.12s
      > select ss_cdemo_sk from tpcds.store_sales group by ss_cdemo_sk limit 3;
      ...
      Fetched 7 row(s) in 0.14s
      

      This looks like it's caused by changes in IMPALA-2581, which attempts to push down limits to pre-aggregation. In SingleNodePlanner, there is no pre-aggregation, which the patch appears to have failed to account for.

      Attachments

        Issue Links

          Activity

            People

              MikaelSmith Michael Smith
              MikaelSmith Michael Smith
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: